src/objects/Compliance__c.object
<CustomObject>
    <fields>
        <fullName>Applicable_Fines__c</fullName>
        <label>Applicable Fines</label>
        <picklist>
            <controllingField>Subject_to_Fines__c</controllingField>
            <picklistValues>
                <fullName>&lt;1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;1,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;1,000,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Areas_Affected__c</fullName>
        <inlineHelpText>Select Business Area(s) affected. You can select more than 1.</inlineHelpText>
        <label>Business Areas Affected</label>
        <picklist>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pasadena Plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Comments_about_this_Test__c</fullName>
        <label>Comments about this Test</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Agency__c</fullName>
        <label>Compliance Agency</label>
        <picklist>
            <picklistValues>
                <fullName>DOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMCSR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NLRB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSHA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USDA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliance_Area__c</fullName>
        <label>Compliance Area</label>
        <picklist>
            <controllingField>Compliance_Agency__c</controllingField>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workplace Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee/Labor Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Safety</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliance_ID__c</fullName>
        <label>Compliance ID</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Compliances</relationshipLabel>
        <relationshipName>Compliances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_Score__c</fullName>
        <formula>(Investment_needed__c  +  Prior_Fines_Incurred__c) / 20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Control_Activity_to_be_Tested__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Control Activity to be Tested</label>
        <referenceTo>Controls__c</referenceTo>
        <relationshipLabel>Compliance</relationshipLabel>
        <relationshipName>Compliance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Audit__c</fullName>
        <description>Enter date that the last compliance audit occurred</description>
        <label>Date of Last Audit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_next_Test__c</fullName>
        <inlineHelpText>Select date from calendar</inlineHelpText>
        <label>Date of next Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_this_Test__c</fullName>
        <label>Date of this Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_Test__c</fullName>
        <label>Description of Test</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enforcement_details__c</fullName>
        <inlineHelpText>Describe any enforcement that has occurred. Include Date.</inlineHelpText>
        <label>Enforcement details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <label>Escalated</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Facility_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>rkl__RK_Hierarchy_Node__c</referenceTo>
        <relationshipLabel>Compliance</relationshipLabel>
        <relationshipName>Compliance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Two Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Three Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impact_Area__c</fullName>
        <label>Impact Area</label>
        <picklist>
            <picklistValues>
                <fullName>Commodity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss of revenue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendors</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Investment_needed__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter cost of investment</inlineHelpText>
        <label>Investment needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Level_of_Enforcement__c</fullName>
        <label>Level of Enforcement</label>
        <picklist>
            <picklistValues>
                <fullName>Cease and Desist notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shutdown - Permanent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shutdown - Temporary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning letter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Criminal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-site audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-site audit</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <formula>TEXT(Facility_Lookup__r.rkl__State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Audit__c</fullName>
        <label>Prior Audit?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_Fines_Incurred__c</fullName>
        <inlineHelpText>Enter estimated total of all prior fines incurred</inlineHelpText>
        <label>Prior Fines Incurred</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Violations__c</fullName>
        <inlineHelpText>Enter details about prior violations similar to this one.</inlineHelpText>
        <label>Prior Violations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Process_Areas_Affected__c</fullName>
        <label>Process Areas Affected</label>
        <picklist>
            <picklistValues>
                <fullName>CB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation/Logistics</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project_required_to_Comply__c</fullName>
        <label>Project required to Comply?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regulatory_Standard_Affected__c</fullName>
        <label>Regulatory Standard Affected</label>
        <picklist>
            <picklistValues>
                <fullName>Part 40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part 395.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part 390</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Driver Fitness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatigue Drivers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cargo Securement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 CFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part 91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part 135</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Modernization Act</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Recall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labeling and Nutrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homeland Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety Inspections</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Remedial_Action_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Remedial Action Assigned To?</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Compliances (Remedial Action Assigned To?)</relationshipLabel>
        <relationshipName>Compliances1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remedial_Action_Due_Date__c</fullName>
        <label>Remedial Action Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remedial_Action_Required__c</fullName>
        <label>Remedial Action Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Repeat_Violation__c</fullName>
        <label>Repeat Violation?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Known</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RoI_for_Investment_in_remediation__c</fullName>
        <description>Calculates approx RoI by comparing Prior fines with Investment required.  Note: Guide only as History may not necessarily repeat. Also, Fines may increase if there is a history of violations.</description>
        <formula>Prior_Fines_Incurred__c /  Investment_needed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RoI for Investment in remediation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score_for_this_Test__c</fullName>
        <label>Score for this Test</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_of_Current_Violations__c</fullName>
        <inlineHelpText>If all current violations have been resolved, select &quot;Resolved&quot; otherwise select &quot;Unresolved&quot;</inlineHelpText>
        <label>Status of Current Violations</label>
        <picklist>
            <picklistValues>
                <fullName>Unresolved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_to_Fines__c</fullName>
        <label>Subject to Fines?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_to_Fines_and_Penalties__c</fullName>
        <label>Subject to Fines and Penalties</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Compliance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Compliance_Area__c</columns>
        <columns>Compliance_Score__c</columns>
        <columns>Compliance_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Compliance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compliance</pluralLabel>
    <recordTypes>
        <fullName>Physicians_Insurance</fullName>
        <active>true</active>
        <label>Physicians Insurance</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_of_next_test_not_in_the_past</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(Date_of_next_Test__c  &gt;= TODAY())</errorConditionFormula>
        <errorDisplayField>Date_of_next_Test__c</errorDisplayField>
        <errorMessage>Date of next test can not be in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_of_this_test_not_in_future</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(Date_of_this_Test__c  &lt;= TODAY())</errorConditionFormula>
        <errorDisplayField>Date_of_this_Test__c</errorDisplayField>
        <errorMessage>Date of this test can not be in the future</errorMessage>
    </validationRules>
</CustomObject>